--- a/views/index.ejs
+++ b/views/index.ejs
@@ -155,7 +155,7 @@
 
     </script>
 <footer style="margin-top: 40px; text-align: center;">
-  <p>Made with ❤️ in INDIA by <strong>Lalith</strong></p>
+  <p>Made in INDIA <strong>Lalith</strong></p>
   <p><a href="https://github.com/Smasher-Lab/MyWeatherApp" target="_blank">View on GitHub</a></p>
 </footer>
 </body>
