--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,93 @@
+*{
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+  transition: background-color 0.3s, color 0.3s;
+  text-decoration: none;
+  list-style: none;
+}
 body {
-    font-family: sans-serif;
+    font-family: Arial, sans-serif;
     text-align: center;
-    background: #f0f0f0;
+    background: #ffffff;
+}
+header {
+    background-color: #71c3e0;
+    display: flex;
+    padding: 20px;
+    color: white;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+#app-title {
+    font-family: "Comic Relief", system-ui;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #fff;
+}
+header nav ul {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+header nav li a {
+    color: rgb(237, 237, 237);
+    text-decoration: none;
+    font-weight: bold;
+}
+/* Dropdown style */
+nav ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  gap: 15px;
+}
+
+nav li {
+  position: relative;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  min-width: 150px;
+  z-index: 1;
+}
+
+.dropdown-content li {
+  padding: 8px 12px;
+}
+
+.dropdown-content li a {
+  text-decoration: none;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+h1 {
+    margin :20px;
+    font-size: 5rem;
+    font-family: "Comic Relief", system-ui;
+    font-weight: 500;
+}
+h2 {
+   margin: 10px;
+    color: #097af3;
 }
 input, button {
+    font-family: "Comic Relief", system-ui;
+    border-radius: 10px;
     padding: 10px;
     margin: 10px;
 }
@@ -14,14 +98,15 @@ body.light-mode {
 
 body.dark-mode {
   color: #fff;
-  background-color: #1e1e1e;
+  background-color: #2f2e2e;
 }
 
 #mode-toggle {
   position: absolute;
-  top: 20px;
+  top: 80px;
   right: 20px;
   padding: 8px 12px;
+  margin-left: 10px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
